--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "leetcode-playground",
   "version": "1.0.0",
   "scripts": {
-    "start": "watch -f test.js -r \"node test.js > test.log\""
+    "start": "watch -f *.js -r \"node ${p} > test.log\""
   },
   "dependencies": {
     "cli-watch": "^1.0.7"
